# AndroidXiboclienteink

./: .gitignore  EJECUTAR_TEST.md  FINAL_SUMMARY.md  INSTALL_ADB.md  LICENSE  PROJECT_STATUS.md  README.md  TEST_NOW.md  build.gradle.kts  gradle.properties  settings.gradle.kts  test_tablet.sh
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: eink_controller.cpp  eink_jni.cpp
app/src/main/java/com/xibo/eink/: XiboEinkApplication.kt
app/src/main/java/com/xibo/eink/di/: AppModule.kt
app/src/main/java/com/xibo/eink/eink/: EinkDisplayManager.kt
app/src/main/java/com/xibo/eink/ui/activities/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EINK_OPTIMIZATION.md  QUICK_START.md  TESTING_GUIDE.md
scripts/: install_and_test.sh
